mvc/1.1/_index.md
---
title: "Jakarta MVC 1.1"
date: 2020-10-14
summary: "First Jakarta EE release for Jakarta MVC"
---
Jakarta MVC defines a standard for creating web applications following the action-based model-view-controller pattern.

* [Jakarta MVC 1.1 Release Record](https://projects.eclipse.org/projects/ee4j.mvc/releases/1.1)
* [Jakarta MVC 1.1 Specification Document](./jakarta-mvc-spec-1.1.pdf) (PDF)
* [Jakarta MVC 1.1 Specification Document](./jakarta-mvc-spec-1.1.html) (HTML)
* [Jakarta MVC 1.1 Javadoc](./apidocs)
* [Jakarta MVC 1.1 TCK](http://download.eclipse.org/jakartaee/mvc/1.1/jakarta-mvc-tck-1.1.0.zip) ([sig](http://download.eclipse.org/jakartaee/mvc/1.1/jakarta-mvc-tck-1.1.0.zip.sig), [sha](http://download.eclipse.org/jakartaee/mvc/1.1/jakarta-mvc-tck-1.1.0.zip.sha256), [pub](https://jakarta.ee/specifications/jakartaee-spec-committee.pub))
  * For all TCK releases, see download directory here: http://download.eclipse.org/jakartaee/mvc/1.1 
* Maven coordinates
  * [jakarta.mvc:jakarta.mvc-api:jar:1.1.0](https://central.sonatype.com/artifact/jakarta.mvc/jakarta.mvc-api/1.1.0/jar)

# Compatible Implementations

* [Eclipse Krazo 1.1.0](https://eclipse-ee4j.github.io/krazo/downloads/1.1.0.html)

# Ballots

## Plan Review

This Specification Project's Plan Review was covered by the Creation Review which concluded successfully on 2020-05-21 with the following results:

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
| Kenji Kazumura                                 | Fujitsu             |  +1  |
| Dan Bandera, Kevin Sutter                      | IBM                 |  +1  |
| Ed Bratt, Dmitry Kornilov                      | Oracle              |  +1  |
| Andrew Pielage, Matt Gill                      | Payara              |      |
| Scott Stark, Mark Little                       | Red Hat             |  +1  |
| David Blevins, Jean-Louis Monteiro             | Tomitribe           |  +1  |
| Ivar Grimstad                                  | EE4J PMC            |  +1  |
| Marcelo Ancelmo, Martijn Verburg               | Participant Members |  +1  |
| Werner Keil                                    | Committer Members   |  +1  |
| Scott (Congquan) Wang                          | Enterprise Members  |      |
|                                                | **Total**           | **8**|

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg00650.html)

## Release Review

The Specification Committee Ballot concluded successfully on 2020-09-21 with the following results.

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
| Kenji Kazumura                                 | Fujitsu             |  +1  |
| Dan Bandera, Kevin Sutter                      | IBM                 |  +1  |
| Ed Bratt, Dmitry Kornilov                      | Oracle              |  +1  |
| Andrew Pielage, Matt Gill                      | Payara              |  +1  |
| Scott Stark, Mark Little                       | Red Hat             |  no vote  |
| David Blevins, Jean-Louis Monteiro             | Tomitribe           |  +1  |
| Ivar Grimstad                                  | EE4J PMC            |  +1  |
| Marcelo Ancelmo, Martijn Verburg               | Participant Members |  +1  |
| Werner Keil                                    | Committer Members   |  +1  |
| Scott (Congquan) Wang                          | Enterprise Members  |  no vote  |
|                                                | **Total**           | **8**|

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg00991.html)
